      #466).
    * Updates to Nimbus JOSE+JWT 9.39
    * Updates to JSON Smart 2.5.1
    * Updates to Tink 1.13.0
    * Updates to BouncyCastle 1.78
    * Updates tests from Java 11 to Java 17 runtime.

version 11.11 (2024-05-15)
    * Adds support for the dpop_bound_access_tokens OAuth 2.0 client metadata
      parameter.
    * Updates to Nimbus JOSE+JWT 9.39.1

version 11.12 (2024-05-17)
    * Moves the getExpirationTime method from IDTokenClaimsSet to
      CommonOIDCTokenClaimsSet.
    * LogoutTokenClaimsSet and LogoutTokenValidator must support the required
      "exp" claim (iss #469).
    * Adds new LogoutTokenClaimsSet constructor that includes an "exp" claim
      argument.
    * Deprecates the LogoutTokenClaimsSet constructor that doesn't include the
      "exp" claim argument.
    * LogoutTokenValidator should accept JWS header "typ":"JWT" (iss #465).

version 11.12.1 (2024-06-25)
    * The TokenIntrospectionRequest.parse method must throw a ParseException
      when a blank token is found (iss #470).
    * Updates to Nimbus JOSE+JWT 9.40

version 11.13 (2024-06-25)
    * TypelessToken overrides equals and hashCode.
    * The TokenRevocationRequest.parse method must throw a ParseException when
      a blank token is found (iss #471).
    * JWTAuthentication.parseClientID(Map<String,List<String>>) must correctly
      handle empty and blank client_id values (iss #472).

version 11.14 (2024-07-30)
    * Adds GrantType.getShortName method returning a short (display) name for
      the grant.

version 11.15 (2024-08-13)
    * Adds OpenID Connect Native SSO for Mobile Apps 1.0 (draft 06) support.
    * Adds TokenRequest.Builder class.
    * Removes remaining usages of deprecated HTTPRequest and HTTPResponse
      methods.
    * Switches to more efficient Objects.requireNonNull in constructors.
    * Removes specification section references in JavaDocs to reduce
      maintenance effort (iss #475).