@@ -2453,5 +2453,7 @@ version 11.15 (2024-08-13)
     * Removes remaining usages of deprecated HTTPRequest and HTTPResponse
       methods.
     * Switches to more efficient Objects.requireNonNull in constructors.
+    * Fixes the POST implementation in
+      AuthorizationRequest.toHTTPRequest(HTTPRequest.Method) (iss #476).
     * Removes specification section references in JavaDocs to reduce
       maintenance effort (iss #475).
